--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:       Anshuman Chhabra's Blog
-email:       anshuman.lalakers@gmail.com
+email:       anshumanc.1996@gmail.com
 author:      Anshuman Chhabra
 description: "Articles on networks, machine learning and computer science in general, straight from the heart."
 baseurl:     ""
@@ -111,7 +111,7 @@ text:
       sending:  'sending..'
       sent:     'Message sent!'
       error:    'Error!'
-  thanks: 'Thanks for contacting us. We will reply as soon as possible.'
+  thanks: 'Thank you for contacting me. I will reply as soon as possible!'
   og_locale: 'en_US'
 
 # Build settings
