--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title:       Anshuman Chhabra's Blog
 email:       anshumanc.1996@gmail.com
+altemail:    anshuman.lalakers@gmail.com
 author:      Anshuman Chhabra
 description: "Articles on networks, machine learning and computer science in general, straight from the heart."
 baseurl:     ""
